--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,7 @@
-body{
+html,body{
     overflow-x: hidden;
+    position: relative;
+    /* width: 100%; */
     /* height: 8000px; */
 }
 .col1{
@@ -18,8 +20,10 @@ body{
     border: 1px solid lightgray;
     padding-left: 70px;
     padding-right: 70px;
-    position: sticky;
-    top: 0;
+    position: fixed;
+    margin: 0%;
+    height: 45px;
+    width: 100%;
     z-index: 10;
     background-color: white !important;
 }
@@ -38,6 +42,7 @@ body{
 
 
 
+
 @media screen and (min-width: 300px) and (max-width: 900px){
 #id1{
     display: none;
@@ -51,8 +56,9 @@ body{
 
 .main-cont2{
     position: fixed;
+    top: 45px;
     width: 100%;
-    z-index: 5;
+    z-index: 20;
     background-color: white !important;
     box-shadow: 0 3px 8px -7px gray;
 }
@@ -248,7 +254,7 @@ body{
         top: 250px;
     }
     .play{
-        display: block;
+        display: none;
     }
     #id2{
         font-size: 35px;
@@ -1011,7 +1017,7 @@ footer{
     position: fixed;
     right: 0;
     top: 40%;
-    z-index: 20;
+    z-index: 50;
 }
 .new-tool2{
     /* position: absolute; */
@@ -1031,6 +1037,11 @@ footer{
 }
 
 
+@media screen and (min-width: 300px) and (max-width: 900px){
+    .new-tool{
+        /* display: none; */
+    }
+}
 
 
 
